--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id("androidx.navigation.safeargs")
+
 }
 
 
@@ -63,7 +64,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
 
-    // Kotlin
+    // Kotlin navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.7.7")
     implementation("androidx.navigation:navigation-ui-ktx:2.7.7")
 
@@ -73,12 +74,13 @@ dependencies {
     // Testing Navigation
     androidTestImplementation("androidx.navigation:navigation-testing:2.7.7")
 
-    //compose
+    //Compose
+    platform("androidx.compose:compose-bom:2024.02.00")
     implementation(platform("androidx.compose:compose-bom:2024.02.00"))
     androidTestImplementation(platform("androidx.compose:compose-bom:2024.02.00"))
 
-    // Material Design 3
     implementation("androidx.compose.material3:material3")
+    implementation ("androidx.compose.ui:ui")
 
     // Android Studio Preview support
     implementation("androidx.compose.ui:ui-tooling-preview")
@@ -101,5 +103,12 @@ dependencies {
     implementation("androidx.activity:activity-compose:1.8.2")
     // Optional - Integration with ViewModels
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0")
+    // Optional - Integration with LiveData
+    implementation("androidx.compose.runtime:runtime-livedata")
+    // Optional - Integration with RxJava
+    implementation("androidx.compose.runtime:runtime-rxjava2")
+
+
+    //for data binding
 
 }
